# zfenton.github.io

./: .env  .env.example  .gitignore  QUICKSTART.md  README.md  anniversary_app.db  index.html  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json
assets/: index-B2ZyGy_a.js  index-BHI0n0wD.js  index-Bj737oNM.js  index-C6HfTnZF.js  index-D214WmNW.css  index-DCX7TpXG.js  index-DNJevc49.js  index-KQ1ozBGy.js
backend/: run.sh
backend/app/: database.py  main.py  models.py  schemas.py  seed_data.py
backend/app/routes/: admin.py  messages.py  users.py  voting.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: 404.html
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: AdminResults.tsx  MessagePage.tsx  ThankYou.tsx  VotingPage.tsx  Welcome.tsx
